--- a/app1/src/App.css
+++ b/app1/src/App.css
@@ -1,14 +1,16 @@
+@import 'antd/dist/antd.css';
+
 .App {
   text-align: center;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #dedfe0;
+  height: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: red;
 }
